--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Календарь с учебных недель</title>
+    <title>Календарь учебных недель</title>
    <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <style>
         body {
